[RESTEASY-1693] replaced obsolete wildfly flag for security manager.  Pass new flag with proper arquillian property (#1224)