@@ -16,7 +16,8 @@
     <properties>
         <version.resteasy.testsuite>${project.version}</version.resteasy.testsuite>
         <additional.surefire.excluded.groups></additional.surefire.excluded.groups>
-        <securityManagerArg></securityManagerArg>
+        <!-- default value required for cmd-line -->
+        <securityManagerArg>-DSECMGR="false"</securityManagerArg>
         <!-- Optional property for jacoco report generation -->
         <sources.path></sources.path>
         <jacoco.agent></jacoco.agent>
@@ -30,7 +31,8 @@
                 <configuration>
                     <failIfNoTests>false</failIfNoTests>
                     <systemPropertyVariables>
-                        <additionalJvmArgs>${additionalJvmArgs} ${securityManagerArg}</additionalJvmArgs>
+                        <securityManagerArg>${securityManagerArg}</securityManagerArg>
+                        <additionalJvmArgs>${additionalJvmArgs}</additionalJvmArgs>
                         <ipv6>false</ipv6>
                         <ipv6ArquillianSettings></ipv6ArquillianSettings>
                         <node>127.0.0.1</node>
@@ -163,7 +165,8 @@
                         <configuration>
                             <testFailureIgnore>true</testFailureIgnore>
                             <systemPropertyVariables>
-                                <additionalJvmArgs>${additionalJvmArgs} ${securityManagerArg}</additionalJvmArgs>
+                                <securityManagerArg>${securityManagerArg}</securityManagerArg>
+                                <additionalJvmArgs>${additionalJvmArgs}</additionalJvmArgs>
                                 <ipv6>true</ipv6>
                                 <ipv6ArquillianSettings>-Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6ArquillianSettings>
                                 <node>::1</node>
@@ -204,7 +207,7 @@
                 </property>
             </activation>
             <properties>
-                <securityManagerArg>-Djava.security.manager</securityManagerArg>
+                <securityManagerArg>-secmgr</securityManagerArg>
             </properties>
         </profile>
         <!-- This profile creates custom server configuration file with configured Elytron subsystem -->
@@ -268,7 +271,8 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration combine.children="append">
                             <systemPropertyVariables>
-                                <additionalJvmArgs>${additionalJvmArgs} ${securityManagerArg}</additionalJvmArgs>
+                                <securityManagerArg>${securityManagerArg}</securityManagerArg>
+                                <additionalJvmArgs>${additionalJvmArgs}</additionalJvmArgs>
                                 <jboss.server.config.file.name>standalone-full-elytron.xml</jboss.server.config.file.name>
                                 <ipv6>false</ipv6>
                                 <ipv6ArquillianSettings></ipv6ArquillianSettings>
